tests/alias_inference_error.june
// error: compatible lifetime

struct Foo {
    x: i64
}

struct allocator Bar {
    foo: shared Foo
}

fun qux(mut bar: shared Bar) -> shared Foo {
    let foo = new shared Foo(x: 100)

    bar.foo = foo

    return foo
}

fun main() {
    mut bar = new shared Bar(foo: new shared Foo(x: 88))

    let foo = qux(bar)

    println(foo.x)
}